test/typecheck/bad-callimport-type-mismatch.txt
;;; ERROR: 1
(module
  (import "foo" "bar" (func (param i32)))
  (func
    f32.const 0
    call 0))
(;; STDERR ;;;
out/test/typecheck/bad-callimport-type-mismatch.txt:6:5: error: type mismatch in call, expected i32 but got f32.
    call 0))
    ^^^^^^
;;; STDERR ;;)
